--- a/index.html
+++ b/index.html
@@ -17,31 +17,28 @@
  <!-- prima sezione main-->
 
     <main>
-        <div class="sezione1">
+        <section class="main-top">
 
-        </div>
+        </section>
 
 <!-- seconda sezione main -->
+        <h1></h1>
 
-        <nav>
-
-        </nav>
-
-        <div class="wrap">
+        <section class="main-bot">
 
             <aside>
 
             </aside>
 
-            <div class="central">
+            <article>
 
-            </div>
+            </article>
 
             <aside>
 
             </aside>          
 
-        </div>
+        </section>
     </main>
 
 <!-- sezione finale -->
